deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: penlight
  namespace: penlight
  labels:
    app: penlight
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: penlight
