deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penlight-ingress
  namespace: penlight
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
    - host: penlight.aooba.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: penlight
                port:
                  number: 80
